# SnowPyt-MechParams

./: .gitignore  .venv-instructions.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Pipfile  README.md  conftest.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: code-quality.yml
algorithm/: README.md  algorithm_flowchart.md  data_structures.py  definitions.py  density_walkthrough.md  draft_report.md  draft_report.tex  graph_algorithm_description.docx  implementation_v1.ipynb  parameterization_algorithm.py  test_algorithm.ipynb  ~$aph_algorithm_description.docx
docs/: 2026-03-11-weac-skier-criterion-adapter.plan.md  2026-03-12-weac-integration-progress.md  2026-03-13-roch-stability-criterion.md  D11_pathways_complete_list.md  api_reference.md  code_description.md  conf.py  contributor_guide.md  data_structures_uml.md  examples.md  execution_engine.md  execution_engine_architecture.md  execution_engine_implementation.md  figures.md  getting_started.md  implementation_plan_graph_integration_REVISED.md  index.md  interpreting_results.md  methods.md  parameter_graph.md  pathway_execution.md  plan.md  refactor_plan.md  snowpilot_workflow.md  units_uncertainty.md  weac_adapter_plan.md
docs/_scripts/: generate_method_catalog.py
docs/code-reviews/: 2026-03-13-mkc-add-stability-criterion-code-review.md  2026-03-15-pr-5-code-review.md  2026-03-16-pr-5-execution-algorithm-code-review.md  2026-03-16-pr-5-graph-module-code-review.md  2026-03-16-pr-5-models-refactor-code-review.md  2026-03-22-pr-5-layer-parameters-code-review.md  2026-03-22-pr-5-slab-parameters-code-review.md  2026-03-22-pr-5-stability-criteria-code-review.md  2026-03-22-pr-5-weak-layer-parameters-code-review.md
docs/diagrams/: full.md  layer.md  overview.md  slab.md  slab_weight.md  stability.md
examples/: D11_analysis.ipynb  KarlQ.ipynb  KarlQ1.ipynb  README.md  all_D11_pathways.ipynb  all_density_pathways.ipynb  all_e_mod_pathways.ipynb  all_poissons_ratio_pathways.ipynb  analyze_ectp_slabs.ipynb  compare_D11_across_pathways.ipynb  compare_D11_across_pathways_TEST.ipynb  dataset_ectp_slabs.ipynb  dataset_overview.ipynb  dataset_stats.ipynb  dataset_temp_info.ipynb  dataset_weak_layer_info.ipynb  density.ipynb  density_calculation_demo.ipynb  density_geldsetzer.ipynb  density_kim_geldsetzer.ipynb  direct_density_measurements.ipynb  emod_bergfeld.ipynb  emod_comparison.ipynb  emod_comparison_calculated_density.ipynb  emod_comparison_direct_density.ipynb  emod_kochle.ipynb  execution_engine_demo.ipynb  geldsetzer.ipynb  grain_form_count.ipynb  kim.ipynb  kim_geldsetzer.ipynb  multiple_slabs_example.py  notebook_utils.py  paper_diagrams.ipynb  paper_figure_utils.py  paper_figures.ipynb  poissons_ratio_comparison.ipynb  roch_skier_all_parameters.ipynb  roch_slab_results.parquet  slab_elasticity_results.parquet  (+11 more)
examples/archive/: all_density_pathways.ipynb  all_e_mod_pathways.ipynb  all_poissons_ratio_pathways.ipynb  analyze_ectp_slabs.ipynb  compare_D11_across_pathways.ipynb  dataset_stats.ipynb  dataset_weak_layer_info.ipynb  density_calculation_demo.ipynb  density_direct_measurements.ipynb  density_geldsetzer.ipynb  density_kim_jamieson_table2.ipynb  density_kim_jamieson_table5.ipynb  elastic_modulus_calculation_demo.ipynb  emod_bergfeld.ipynb  emod_comparison_calculated_density.ipynb  emod_comparison_direct_density.ipynb  emod_kochle.ipynb  execution_engine_demo.ipynb  multiple_slabs_example.py  poissons_ratio_comparison.ipynb  static_load.ipynb
examples/data/: snowpits-10939-caaml.xml  snowpits-13779-caaml.xml  snowpits-15175-caaml.xml  snowpits-17403-caaml.xml  snowpits-17737-caaml.xml  snowpits-18239-caaml.xml  snowpits-18276-caaml.xml  snowpits-19022-caaml.xml  snowpits-19024-caaml.xml  snowpits-19180-caaml.xml  snowpits-20106-caaml.xml  snowpits-20167-caaml.xml  snowpits-20389-caaml.xml  snowpits-20554-caaml.xml  snowpits-21514-caaml.xml  snowpits-21622-caaml.xml  snowpits-21706-caaml.xml  snowpits-21707-caaml.xml  snowpits-21708-caaml.xml  snowpits-21709-caaml.xml  snowpits-21712-caaml.xml  snowpits-21713-caaml.xml  snowpits-21714-caaml.xml  snowpits-21725-caaml.xml  snowpits-21730-caaml.xml  snowpits-21731-caaml.xml  snowpits-21732-caaml.xml  snowpits-21734-caaml.xml  snowpits-21735-caaml.xml  snowpits-21737-caaml.xml  snowpits-21740-caaml.xml  snowpits-21741-caaml.xml  snowpits-21742-caaml.xml  snowpits-21745-caaml.xml  snowpits-21747-caaml.xml  snowpits-21762-caaml.xml  snowpits-21780-caaml.xml  snowpits-21848-caaml.xml  snowpits-21946-caaml.xml  snowpits-22626-caaml.xml  (+862 more)
examples/figures/: density_method_support_matrix.py  elastic_modulus_poissons_ratio_support_matrix.py
examples/sample_data/: README.md
paper/: README_copernicus_package_7_13.txt  copernicus.cls  figure_plan.md  hess_submission_requirements.md  mkc_sections.tex  outline.aux  outline.tex  paper_info.md  tandf_submission_requirements.md  working_draft.tex
scripts/: generate_diagram.py
sources/: README.md  tc-17-1475-2023.xml
src/data_structures/: data_structures.py
src/snowpyt_mechparams/: A11.py  A55.py  B11.py  D11.py  README.md  __init__.py  algorithm.py  constants.py  data_structures.py  density.py  elastic_modulus.py  poissons_ratio.py  pressure.py  shear_modulus.py  sigma_c_minus.py  sigma_c_plus.py  snowpilot.py  static_load.py
tests/: __init__.py  test_algorithm.py  test_computation_cache.py  test_constants.py  test_copy_optimization.py  test_density_methods.py  test_dispatcher_grain_form.py  test_docs_smoke.py  test_elastic_modulus_methods.py  test_engine_api.py  test_execution_config.py  test_executor_dynamic_programming.py  test_grain_form_utils.py  test_graph.py  test_graph_visualization.py  test_integration.py  test_layer_parameter_method_uncertainty.py  test_methods_registry.py  test_performance.py  test_pit_layer_slab_creation.py  test_poissons_ratio_methods.py  test_roch_criterion.py  test_shear_modulus_methods.py  test_slab_parameters.py  test_snowpilot.py  test_snowpilot_convert.py  test_weac_criterion.py  test_weak_layer_engine.py  test_weak_layer_parameters.py
(+113 files in other folders)
