[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snowpyt-mechparams"
version = "0.4.0"
authors = [
    {name = "Mary Connelly", email = "connellymarykate@gmail.com"},
    {name = "Samuel Verplanck", email = "samuelverplanck@montana.edu"},
]
maintainers = [
    {name = "SnowPyt-MechParams Contributors"},
]
description = "Collaborative Python library for estimating mechanical parameters from snow pit measurements with graph-based parameterization and dynamic programming"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["snow", "avalanche", "mechanical properties", "snowpit", "geophysics", "academic", "collaboration", "research"]
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.6.0",
    "pandas>=1.2.0",
    "snowpylot>=1.1.3",
    "uncertainties>=3.0.0",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]
io = [
    "pyarrow>=10.0.0",
    "fastparquet>=2024.0.0",
]
weac = [
    "weac>=3.1.4",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.10",
    "myst-parser>=0.15",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "jupyter>=1.0",
    "tqdm>=4.0.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "pyarrow>=10.0.0",
    "fastparquet>=2024.0.0",
]

# TODO: update URLs before PyPI upload — replace with real repository URL
[project.urls]
Homepage = "https://github.com/connellymk/snowpyt-mechparams"
Documentation = "https://snowpyt-mechparams.readthedocs.io/"
Repository = "https://github.com/connellymk/snowpyt-mechparams.git"
"Bug Tracker" = "https://github.com/connellymk/snowpyt-mechparams/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "pandas.*",
    "matplotlib.*",
    "seaborn.*",
    "uncertainties.*",
    "snowpylot.*",
    "weac.*",
]
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
# Notebooks and examples often have imports after setup (E402) and compact syntax (E701)
"examples/**" = ["E402", "E701"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
